[gd_scene load_steps=20 format=3 uid="uid://dll6t0qviglyv"]

<<<<<<< HEAD
[ext_resource type="Script" uid="uid://bcxs6xiv4hals" path="res://Scripts/loytan_enigme_1.gd" id="1_c85vk"]
=======
[ext_resource type="Script" uid="uid://djcjvh8kbm5i0" path="res://Scripts/loytan_enigme_1.gd" id="1_c85vk"]
>>>>>>> main4.4.1
[ext_resource type="AudioStream" uid="uid://b5h7wmfebxmvh" path="res://Sounds/enigma_debut.mp3" id="2_73yks"]
[ext_resource type="Texture2D" uid="uid://bhtfor6q6se7" path="res://Textures/COIN.png" id="3_7t2tp"]
[ext_resource type="Texture2D" uid="uid://cjdtiadalwaun" path="res://Textures/enigma_back.png" id="3_xtil1"]
[ext_resource type="StyleBox" uid="uid://c585g431q14ue" path="res://Thème/button_normal.tres" id="4_hcsig"]
[ext_resource type="StyleBox" uid="uid://bibiwmbse6bsf" path="res://Thème/button_hover.tres" id="4_huppo"]
[ext_resource type="StyleBox" uid="uid://dbawkfil8hb6o" path="res://Thème/button_pressed.tres" id="7_jvrct"]
[ext_resource type="StyleBox" uid="uid://b56w2nrti7wer" path="res://Thème/button_disabled.tres" id="8_6qqgj"]
[ext_resource type="Texture2D" uid="uid://des7hyfw82tql" path="res://Textures/PNJ/Loytan/loytan_full.png" id="9_7fteo"]
[ext_resource type="Texture2D" uid="uid://b3wiy0fdxa74c" path="res://Textures/hourglass.png" id="9_jyybj"]

[sub_resource type="Animation" id="Animation_lqvf3"]
length = 0.001
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Validate:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0q1ba"]
resource_name = "validate"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Validate:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g1eob"]
_data = {
&"RESET": SubResource("Animation_lqvf3"),
&"validate": SubResource("Animation_0q1ba")
}

[sub_resource type="Animation" id="Animation_32bcw"]
length = 0.001
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Validate:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4g8bq"]
resource_name = "validate"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Validate:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nlyct"]
_data = {
&"RESET": SubResource("Animation_32bcw"),
&"validate": SubResource("Animation_4g8bq")
}

[sub_resource type="Animation" id="Animation_vd7td"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Validate:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ges6v"]
resource_name = "validate"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Validate:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_laa26"]
_data = {
&"RESET": SubResource("Animation_vd7td"),
&"validate": SubResource("Animation_ges6v")
}

[node name="LoytanEnigme1" type="Node2D"]
script = ExtResource("1_c85vk")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_73yks")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 128
text = "ENIGMA_1_TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Coins" type="Label" parent="ColorRect"]
texture_filter = 1
layout_mode = 0
offset_left = 960.0
offset_top = 672.0
offset_right = 2080.0
offset_bottom = 739.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 64
text = "0"
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/Coins"]
texture_filter = 1
position = Vector2(-56, 40)
scale = Vector2(4, 4)
texture = ExtResource("3_7t2tp")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1088.0
texture = ExtResource("3_xtil1")

[node name="Panel" type="Panel" parent="TextureRect"]
layout_mode = 0
offset_left = 128.0
offset_top = 112.0
offset_right = 1792.0
offset_bottom = 272.0
theme_override_styles/panel = ExtResource("4_huppo")

[node name="Label" type="Label" parent="TextureRect/Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 1664.0
offset_bottom = 149.0
theme_override_font_sizes/font_size = 32
text = "ENIGMA_1_SUBJECT"
autowrap_mode = 3

[node name="Coins" type="Label" parent="TextureRect"]
texture_filter = 1
layout_mode = 0
offset_left = 56.0
offset_top = 8.0
offset_right = 1176.0
offset_bottom = 75.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 64
text = "0"
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/Coins"]
texture_filter = 1
position = Vector2(-56, 40)
scale = Vector2(4, 4)
texture = ExtResource("3_7t2tp")

[node name="1" type="Button" parent="TextureRect"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 0
offset_left = 32.0
offset_top = 416.0
offset_right = 352.0
offset_bottom = 736.0
focus_mode = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/disabled = ExtResource("8_6qqgj")
theme_override_styles/hover = ExtResource("4_huppo")
theme_override_styles/pressed = ExtResource("7_jvrct")
theme_override_styles/normal = ExtResource("4_hcsig")
text = "ENIGMA_1_RESPONSE1"
text_overrun_behavior = 1

[node name="2" type="Button" parent="TextureRect"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 0
offset_left = 416.0
offset_top = 416.0
offset_right = 736.0
offset_bottom = 736.0
focus_mode = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/disabled = ExtResource("8_6qqgj")
theme_override_styles/hover = ExtResource("4_huppo")
theme_override_styles/pressed = ExtResource("7_jvrct")
theme_override_styles/normal = ExtResource("4_hcsig")
text = "ENIGMA_1_RESPONSE2"
text_overrun_behavior = 1

[node name="3" type="Button" parent="TextureRect"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 0
offset_left = 800.0
offset_top = 416.0
offset_right = 1120.0
offset_bottom = 736.0
focus_mode = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/disabled = ExtResource("8_6qqgj")
theme_override_styles/hover = ExtResource("4_huppo")
theme_override_styles/pressed = ExtResource("7_jvrct")
theme_override_styles/normal = ExtResource("4_hcsig")
text = "ENIGMA_1_RESPONSE3"
text_overrun_behavior = 1

[node name="4" type="Button" parent="TextureRect"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 0
offset_left = 1184.0
offset_top = 416.0
offset_right = 1504.0
offset_bottom = 736.0
focus_mode = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/disabled = ExtResource("8_6qqgj")
theme_override_styles/hover = ExtResource("4_huppo")
theme_override_styles/pressed = ExtResource("7_jvrct")
theme_override_styles/normal = ExtResource("4_hcsig")
text = "ENIGMA_1_RESPONSE4"
text_overrun_behavior = 1

[node name="5" type="Button" parent="TextureRect"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 0
offset_left = 1568.0
offset_top = 416.0
offset_right = 1888.0
offset_bottom = 736.0
focus_mode = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/disabled = ExtResource("8_6qqgj")
theme_override_styles/hover = ExtResource("4_huppo")
theme_override_styles/pressed = ExtResource("7_jvrct")
theme_override_styles/normal = ExtResource("4_hcsig")
text = "ENIGMA_1_RESPONSE5"
text_overrun_behavior = 1

[node name="6" type="Button" parent="TextureRect"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 0
offset_left = 610.0
offset_top = 755.0
offset_right = 930.0
offset_bottom = 1075.0
focus_mode = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/disabled = ExtResource("8_6qqgj")
theme_override_styles/hover = ExtResource("4_huppo")
theme_override_styles/pressed = ExtResource("7_jvrct")
theme_override_styles/normal = ExtResource("4_hcsig")
text = "ENIGMA_1_RESPONSE6"
text_overrun_behavior = 1

[node name="7" type="Button" parent="TextureRect"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 0
offset_left = 994.0
offset_top = 755.0
offset_right = 1314.0
offset_bottom = 1075.0
focus_mode = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/disabled = ExtResource("8_6qqgj")
theme_override_styles/hover = ExtResource("4_huppo")
theme_override_styles/pressed = ExtResource("7_jvrct")
theme_override_styles/normal = ExtResource("4_hcsig")
text = "ENIGMA_1_RESPONSE7"
text_overrun_behavior = 1

[node name="Timer" type="Label" parent="TextureRect"]
layout_mode = 0
offset_top = 32.0
offset_right = 1920.0
offset_bottom = 99.0
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 64
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/Timer"]
texture_filter = 1
position = Vector2(848, 40)
scale = Vector2(2, 2)
texture = ExtResource("9_jyybj")

[node name="ResultWin" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="ResultWin"]
self_modulate = Color(0.372549, 0.372549, 0.372549, 1)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1088.0
texture = ExtResource("3_xtil1")

[node name="CPUParticles2D" type="CPUParticles2D" parent="ResultWin"]
texture_filter = 1
position = Vector2(960, 540)
texture = ExtResource("9_7fteo")
emission_shape = 3
emission_rect_extents = Vector2(960, 540)
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
angular_velocity_min = -25.0
angular_velocity_max = 25.0
orbit_velocity_min = 0.01
orbit_velocity_max = 0.02
radial_accel_min = -100.0
radial_accel_max = 100.0
scale_amount_min = 10.0
scale_amount_max = 10.0

[node name="ColorRect" type="ColorRect" parent="ResultWin"]
visible = false
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1088.0

[node name="TextResult" type="Label" parent="ResultWin/ColorRect"]
texture_filter = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 128
text = "ENIGMA_CORRECT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="ResultWin"]
layout_mode = 0
offset_left = 128.0
offset_top = 112.0
offset_right = 1792.0
offset_bottom = 272.0
theme_override_styles/panel = ExtResource("4_huppo")

[node name="Label" type="Label" parent="ResultWin/Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 1664.0
offset_bottom = 149.0
theme_override_font_sizes/font_size = 32
text = "ENIGMA_1_SUBJECT"
autowrap_mode = 3

[node name="Response" type="Label" parent="ResultWin/Panel"]
texture_filter = 1
layout_mode = 0
offset_top = 232.0
offset_right = 1656.0
offset_bottom = 467.0
theme_override_font_sizes/font_size = 32
text = "ENIGMA_1_WIN_DESCRIPTION"
autowrap_mode = 3

[node name="Validate" type="Label" parent="ResultWin"]
visible = false
texture_filter = 1
layout_mode = 0
offset_top = 944.0
offset_right = 1920.0
offset_bottom = 979.0
theme_override_font_sizes/font_size = 32
text = "ENIGMA_QUIT"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="ResultWin"]
libraries = {
"": SubResource("AnimationLibrary_g1eob")
}

[node name="ResultLoose" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="ResultLoose"]
self_modulate = Color(0.372549, 0.372549, 0.372549, 1)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1088.0
texture = ExtResource("3_xtil1")

[node name="CPUParticles2D" type="CPUParticles2D" parent="ResultLoose"]
texture_filter = 1
position = Vector2(960, 540)
texture = ExtResource("9_7fteo")
emission_shape = 3
emission_rect_extents = Vector2(960, 540)
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
angular_velocity_min = -25.0
angular_velocity_max = 25.0
orbit_velocity_min = 0.01
orbit_velocity_max = 0.02
radial_accel_min = -100.0
radial_accel_max = 100.0
scale_amount_min = 10.0
scale_amount_max = 10.0

[node name="ColorRect" type="ColorRect" parent="ResultLoose"]
visible = false
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1088.0

[node name="TextResult" type="Label" parent="ResultLoose/ColorRect"]
texture_filter = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 128
text = "ENIGMA_INCORRECT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="ResultLoose"]
layout_mode = 0
offset_left = 128.0
offset_top = 112.0
offset_right = 1792.0
offset_bottom = 272.0
theme_override_styles/panel = ExtResource("4_huppo")

[node name="Label" type="Label" parent="ResultLoose/Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 1664.0
offset_bottom = 149.0
theme_override_font_sizes/font_size = 32
text = "ENIGMA_1_SUBJECT"
autowrap_mode = 3

[node name="Response" type="Label" parent="ResultLoose/Panel"]
texture_filter = 1
layout_mode = 0
offset_top = 232.0
offset_right = 1656.0
offset_bottom = 467.0
theme_override_font_sizes/font_size = 32
text = "ENIGMA_1_LOOSE_DESCRIPTION"
autowrap_mode = 3

[node name="Validate" type="Label" parent="ResultLoose"]
visible = false
modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 0
offset_top = 944.0
offset_right = 1920.0
offset_bottom = 979.0
theme_override_font_sizes/font_size = 32
text = "ENIGMA_QUIT"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="ResultLoose"]
libraries = {
"": SubResource("AnimationLibrary_nlyct")
}

[node name="ResultLooseMax" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="ResultLooseMax"]
self_modulate = Color(0.372549, 0.372549, 0.372549, 1)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1088.0
texture = ExtResource("3_xtil1")

[node name="CPUParticles2D" type="CPUParticles2D" parent="ResultLooseMax"]
texture_filter = 1
position = Vector2(960, 540)
texture = ExtResource("9_7fteo")
emission_shape = 3
emission_rect_extents = Vector2(960, 540)
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
angular_velocity_min = -25.0
angular_velocity_max = 25.0
orbit_velocity_min = 0.01
orbit_velocity_max = 0.02
radial_accel_min = -100.0
radial_accel_max = 100.0
scale_amount_min = 10.0
scale_amount_max = 10.0

[node name="ColorRect" type="ColorRect" parent="ResultLooseMax"]
visible = false
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1088.0

[node name="TextResult" type="Label" parent="ResultLooseMax/ColorRect"]
texture_filter = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 128
text = "ENIGMA_LOOSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="ResultLooseMax"]
layout_mode = 0
offset_left = 128.0
offset_top = 112.0
offset_right = 1792.0
offset_bottom = 272.0
theme_override_styles/panel = ExtResource("4_huppo")

[node name="Label" type="Label" parent="ResultLooseMax/Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 1664.0
offset_bottom = 149.0
theme_override_font_sizes/font_size = 32
text = "ENIGMA_1_SUBJECT"
autowrap_mode = 3

[node name="Response" type="Label" parent="ResultLooseMax/Panel"]
texture_filter = 1
layout_mode = 0
offset_top = 232.0
offset_right = 1656.0
offset_bottom = 467.0
theme_override_font_sizes/font_size = 32
text = "ENIGMA_1_LOOSEMAX_DESCRIPTION"
autowrap_mode = 3

[node name="Validate" type="Label" parent="ResultLooseMax"]
visible = false
modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 0
offset_top = 944.0
offset_right = 1920.0
offset_bottom = 979.0
theme_override_font_sizes/font_size = 32
text = "ENIGMA_QUIT"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="ResultLooseMax"]
libraries = {
"": SubResource("AnimationLibrary_laa26")
}

[connection signal="pressed" from="TextureRect/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="TextureRect/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="TextureRect/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="TextureRect/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="TextureRect/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="TextureRect/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="TextureRect/7" to="." method="_on_7_pressed"]
